<resources>
    <string name="app_name">dagger tutorial</string>
    <string name="first_tab">Main</string>
    <string name="second_tab">Test</string>
    <string name="name">NAME</string>
    <string name="desc">DESC</string>
    <string name="type">TYPE</string>
    <string name="selected">SelectedView</string>
    <string name="race">RACE</string>
    <string name="archetype">ARCHETYPE</string>
    <string name="set_name">SET_NAME</string>
    <string name="set_code">SET_CODE</string>
    <string name="set_price">SET_PRICE</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
