<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.SelectedCardActivity">

    <include
        layout="@layout/custom_toolbar_layout_back"
        android:id="@+id/toolbar1"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1">

        <LinearLayout
            android:id="@+id/amountContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="21dp"
            android:orientation="vertical"
            android:baselineAligned="false">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="256dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/cardBackground"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <TextView
                    android:layout_marginStart="8dp"
                    android:background="@color/cardBackground"
                    android:gravity="end"
                    android:id="@+id/nameT"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/cardBackground"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"/>

                <TextView
                    android:layout_marginStart="8dp"
                    android:background="@color/cardBackground"
                    android:gravity="end"
                    android:id="@+id/descT"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/cardBackground"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/type"/>

                <TextView
                    android:layout_marginStart="8dp"
                    android:gravity="end"
                    android:background="@color/cardBackground"
                    android:id="@+id/typeT"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/type"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/cardBackground"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/race"/>

                <TextView
                    android:layout_marginStart="8dp"
                    android:background="@color/cardBackground"
                    android:gravity="end"
                    android:id="@+id/raceT"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/type"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/cardBackground"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/archetype"/>

                <TextView
                    android:layout_marginStart="8dp"
                    android:background="@color/cardBackground"
                    android:gravity="end"
                    android:id="@+id/archetypeT"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/archetype"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/cardBackground"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/set_name"/>

                <TextView
                    android:layout_marginStart="8dp"
                    android:background="@color/cardBackground"
                    android:gravity="end"
                    android:id="@+id/setNameT"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/set_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/cardBackground"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/set_code"/>

                <TextView
                    android:layout_marginStart="8dp"
                    android:background="@color/cardBackground"
                    android:gravity="end"
                    android:id="@+id/setCodeT"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/set_code"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="32dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/cardBackground"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/set_price"/>

                <TextView
                    android:layout_marginStart="8dp"
                    android:background="@color/cardBackground"
                    android:gravity="end"
                    android:id="@+id/setPriceT"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/set_price"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>